--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,119 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-
+    android:background="@drawable/photo"
     tools:context=".RegisterActivity">
 
+    <!-- Overlay semi-transparent pour améliorer la lisibilité -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#80000000" />
 
-    <!-- Logo -->
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="386dp"
-        android:layout_height="202dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/logoemsi" />
-
-    <!-- Texte de Login-->
-
-    <TextView
-        android:layout_width="wrap_content"
+    <!-- Conteneur principal arrondi -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="2dp"
-        android:text="Sign In"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-    <!-- Champ username -->
-    <!-- Champ Email -->
+        android:layout_centerInParent="true"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/rounded_container_background"
+        android:orientation="vertical"
+        android:padding="20dp">
 
+        <!-- Titre de l'app -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="serif"
+            android:text="Hello"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            android:textStyle="bold" />
 
+        <!-- Texte d'inscription -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:text="Create an account"
+            android:textColor="@color/dark_gray"
+            android:textSize="16sp" />
 
+        <!-- Champ Nom et Prénom -->
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/input_background_white"
+            android:drawableStart="@drawable/ic_person"
+            android:drawablePadding="10dp"
+            app:drawableTint="@color/dark_green"
+            android:hint="Nom et Prenom"
+            android:inputType="textPersonName"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp" />
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:drawableStart="@drawable/baseline_person_24"
-        android:drawablePadding="10dp"
-        android:background="@drawable/input_background"
-        android:hint="Nom et Prenom"
-        android:layout_gravity="center"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        />
+        <!-- Champ Email -->
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/input_background_white"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="10dp"
+            app:drawableTint="@color/dark_green"
+            android:hint="Enter Email or Username"
+            android:inputType="textEmailAddress"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp" />
 
-    <!-- Champ Mot de passe -->
+        <!-- Champ Mot de passe -->
+        <EditText
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/input_background_white"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawablePadding="10dp"
+            app:drawableTint="@color/dark_green"
+            android:hint="Enter your Password"
+            android:inputType="textPassword"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp" />
 
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/input_background"
-        android:drawableStart="@drawable/baseline_person_24"
-        android:drawablePadding="10dp"
-        android:hint="Enter Email or Username"
-        android:inputType="textEmailAddress"
-        android:padding="10dp" />
+        <!-- Champ Vérification Mot de passe -->
+        <EditText
+            android:id="@+id/et_password2"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/input_background_white"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawablePadding="10dp"
+            app:drawableTint="@color/dark_green"
+            android:hint="Verify your Password"
+            android:inputType="textPassword"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp" />
 
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:background="@drawable/input_background"
-        android:drawableStart="@drawable/baseline_person_24"
-        android:drawablePadding="10dp"
-        android:hint="Enter your Password"
-        android:inputType="textPassword"
-        android:padding="10dp" />
+        <!-- Bouton d'inscription -->
+        <Button
+            android:id="@+id/register"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="25dp"
+            android:backgroundTint="@color/blue"
+            android:text="Register"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/et_password2"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:background="@drawable/input_background"
-        android:drawableStart="@drawable/baseline_person_24"
-        android:drawablePadding="10dp"
-        android:hint="Verify your Password"
-        android:inputType="textPassword"
-        android:padding="10dp" />
+        <!-- Texte OR -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginVertical="15dp"
+            android:text="OR"
+            android:textColor="@color/dark_gray"
+            android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/register"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/blue"
-        android:text="Register"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        tools:ignore="HardcodedText" />
+        <!-- Icônes de réseaux sociaux -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:onClick="redirectToLogin"
-        android:paddingTop="5dp"
-        android:paddingBottom="20dp"
-        android:text="Don't have account?Register"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/facebook_icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="8dp"
+                android:contentDescription="Sign in with Facebook"
+                android:padding="8dp"
+                android:src="@drawable/ic_facebook"
+                app:tint="@color/dark_green" />
 
-</LinearLayout>
+            <ImageView
+                android:id="@+id/instagram_icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="8dp"
+                android:contentDescription="Sign in with Instagram"
+                android:padding="8dp"
+                android:src="@drawable/ic_instagram"
+                app:tint="@color/dark_green" />
+
+            <ImageView
+                android:id="@+id/twitter_icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="8dp"
+                android:contentDescription="Sign in with Twitter"
+                android:padding="8dp"
+                android:src="@drawable/ic_twitter"
+                app:tint="@color/dark_green" />
+        </LinearLayout>
+
+        <!-- Texte de connexion -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:onClick="redirectToLogin"
+            android:text="Already have an account? Login"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:minHeight="48dp"
+            android:minWidth="48dp"
+            android:gravity="center"
+            android:padding="8dp"/>
+
+    </LinearLayout>
+
+    <!-- Bouton de fermeture -->
+    <ImageButton
+        android:id="@+id/btn_close"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:background="@drawable/circle_background"
+        android:contentDescription="Close button"
+        android:padding="8dp"
+        android:src="@drawable/ic_close"
+        app:tint="@color/dark_gray" />
+
+</RelativeLayout>
