--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue">#3F51B5</color>
-    <color name="green">#0A3D22</color>
+    <color name="dark_green">#2E7D32</color>
+    <color name="light_green">#81C784</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="dark_gray">#555555</color>
+    <color name="light_gray">#EEEEEE</color>
+    <color name="blue">#1976D2</color>
+    <color name="transparent">#00000000</color>
 </resources>
