--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="light_gray">#EEEEEE</color>
     <color name="blue">#1976D2</color>
     <color name="transparent">#00000000</color>
+    <color name="light_blue">#BBDEFB</color>
+    <color name="light_green1">#C8E6C9</color>
+    <color name="light_gray1">#F5F5F5</color>
+    <color name="accent_orange">#FF9800</color>
+    <color name="accent_red">#E53935</color>
 </resources>
